order not found when non existing user id test
